--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
 header {
     width: 960px;
     height: 85px;
-    background-image: url("..//images/Port_Hope_Header.png");
+    background-image: url("images/Port_Hope_Header.png");
     margin: 0px 0px 0px 0px;
     background-size: 960px 85px;
 }
@@ -393,7 +393,7 @@ nav a:hover {
 footer {
     width: 960px;
     height: 200px;
-    background-image: url(..//images/Port_Hope_Footer.png);
+    background-image: url(images/Port_Hope_Footer.png);
     background-size: 960px 200px;
 }
 
